k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: world-war-game
  labels:
    name: world-war-game
    app: world-war-game
